# git_project_generator

./: .gitignore  .pre-commit-config.yaml  logging.ini  pyproject.toml  usage.ipynb
configs/: example_config.yaml
docs/: README.md
src/: git_project_generator.py
src/git_project_generator/: git_project_generator.py
template_files/: .gitignore  .pre-commit-config.yaml  _logger.py  ci_tests.yaml  config.py  logger.py  logging.ini  main.py  pyproject.toml  ruff.toml  run_tests.yaml
