[project]
name = "git_project_generator"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "attrs>=25.3.0",
    "pyyaml>=6.0.2",
]


[tool.black]
line-length = 88

[tool.ruff]
lint.extend-select = ["I", "W"]
lint.ignore = ["E741"]
line-length = 88

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.4",
    "scalene>=1.5.51",
]
