[project]
name = "REPLACE_PROJECT_NAME"
authors = [
    {name="REPLACE_PROJECT_AUTHOR"},
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = []


[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "*_logger.py",
    "*config.py",
]

[tool.coverage.report]
show_missing=true